--- a/dat-slay/package.json
+++ b/dat-slay/package.json
@@ -12,11 +12,16 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
     "chart.js": "^4.5.1",
+    "d3-fetch": "^3.0.1",
+    "d3-scale": "^4.0.2",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.555.0",
     "papaparse": "^5.5.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "tailwindcss": "^4.1.17"
+    "react-leaflet": "^5.0.0",
+    "tailwindcss": "^4.1.17",
+    "topojson-client": "^3.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
